--- a/index2.html
+++ b/index2.html
@@ -3,45 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> 
+    <style>
+        .container .item{
+            background-color: blue;
+        }
+        .main-container > .item{
+            background-color: red;
+            padding: 10px;
+        }
+        .button{
+            background-color: green;
+            border: 0;
+            padding: 10px;
+        }
+        .button.active{
+            background-color: gray;  
+        }
+        .button.danger{
+            background-color: red;
+        }
+        .item1 + .item2{
+            background-color: yellow;
+    
+        }
+        input[type=text]{
+            background-color: pink;
+            border: 1px solid black;
+            height: 10px;
+        }
+    </style>    
 </head>
 <body>
-    <h1>Register from</h1>
-     ชื่อ <input type="text">
-     นามสกุล <input type="text">
-     อายุ <input type="number" min="0" max="100">
-     <div>
-        เพศ
-        <div>
-        <input name="gender" type="radio"> ชาย
-        </div>
-        <div>
-        <input name="gender" type="radio"> หญิง
-        </div>
-        <div>
-        <input name="gender" type="radio"> ไม่ระบุ
-        </div>
-     </div>
-     <div>
-        งานอดิเรก
-        <div>
-        <input name="hobby" type="checkbox"> อ่านหนังสือ
-        </div>
-        <div>
-        <input name="hobby" type="checkbox"> ดูหนัง
-        </div>
-        <div>
-        <input name="hobby" type="checkbox"> ฟังเพลง
-        </div>
+    <!--1. item เป็นลูกของ container -->
+    <div Class="container">
+        container
+    <div class="item">
+        Item
     </div>
-    <div>
-        คำอธิบาย
-        <textarea></textarea>
-    </div>
+</div>
 
-        <button>ส่งข้อมูล</button>
-        <input type="submit" value="ส่งข้อมูล">
+
+</div>
+
+<!--2. item เป็นลูกของ container แค่ชั้นเดียว-->
+<div class="main-container">
+    Container
+ <div class="item">
+     Item
+     <div class="item">
+        Item 1
+
+     </div>
+     <div class="item">
+        Item 2
+
+     </div>
+     <div class="item">
+        Item 3
+
+     </div>
+
+ </div>
+
+</div>
+<!--3. มี class ติดกัน-->
+ <button class="button">ปุ่ม</button>
+ <button class="button active">ปุ่ม</button>
+ <button class="button danger">ปุ่ม</button>
+
     
+ <!--4. เพื่อนกัน (adjacent)-->
+    <div class="item1">Item 1</div>
+    <div class="item2">Item 2</div>
+
+ <!--5. attribute selector-->
+ <input type="text" name="username">
+ <input type="text" name="password">
+ <input type="text" name="email">
 
 </body>
 </html>
