--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
      <!-- form -->
+      <a href="user.html">Go to User management</a>
      <div class="container">
           <div class="header">
                Register form
