--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
      <!-- form -->
-      <a href="user.html">Go to User management</a>
      <div class="container">
           <div class="header">
                Register form
@@ -67,6 +66,12 @@
           <div id=message class="message"></div>
           <div class="center">
                <button onclick="submitData()" class="button">ส่งข้อมูล</button>
+          </div>
+          <div class="center">
+               <a href="users.html">
+                    <button class="button">ไปยังหน้าผู้ใช้</button>
+               </a>
+
           </div>
      </div>
      <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
